# wsl-and-docker-desktop-manager

./: .gitignore  .pylintrc  ARCHITECTURE_AND_WORKFLOW.md  Add-BOMEncoding.ps1  BACKUP-DOCKER-DATA.ps1  CHANGELOG.md  CODE_UNIT_MANIFEST.md  INSTALL-DOCKER-DESKTOP.ps1  INSTALL-WSL2-DYNAMIC.ps1  LICENSE  LINT-ALL.bat  LINT-CODE.bat  MANAGER.ps1  MANIFEST.in  MASTER-REINSTALL-v2.ps1  MASTER-REINSTALL.ps1  Makefile  README.md  README_DEVELOPMENT.md  SESSION_MEMORY.md  START-MVP.bat  TODO.md  UNINSTALL-DOCKER-DESKTOP.ps1  UNINSTALL-WSL.ps1  check-ps-syntax.ps1  docker_manager.py  pyproject.toml  requirements-dev.in  requirements.in  requirements.txt  run_with_venv.ps1  tmp_backup_branches.txt  wsl_docker_config.json  wsl_docker_manager_mvp.py
.github/: PULL_REQUEST_TEMPLATE.md
dependencies/: requirements-dev.in  requirements-dev.txt
docs/: AI_Guiderails.md  CHANGELOG.md  CODE_QUALITY.md  COMPLETE-REINSTALL-GUIDE.md  RELEASE_CHECKLIST.md  SESSION_MEMORY.md  spec.md
scripts/: Install-Orchestrator.ps1  Uninstall-Orchestrator.ps1  WSL-TUI-Wizard.py  cleanup_pycache.ps1  delete_local_backup_refs.ps1  find_ahead_branches.ps1  release.ps1  sync_reqs_from_pyproject.py  ui_demo.py  update-requirements.ps1
src/: __init__.py  main_orchestrator.py  pyproject.toml  step_result.py  step_runner.py
tests/: README.md  Run-Tests.ps1  test.txt  test_build_ci.py  test_dev_to_build.py  test_lock_unlock_dryrun.py  test_mocks_happy_path.py  test_mocks_skipped_and_negative.py  test_prevent_root_dirs.py  test_smoke.py  test_smoke_install.py  test_unlock_repo_acl_ps1.py
tools/: run_pssa.ps1  (+8 more)
(+92 files in other folders)
